implemented admin logout
