# app/Http/V1/Requests/LoginRequest.php
@@ -1,0 +1,29 @@
+<?php
+
+namespace App\Http\V1\Requests;
+
+class LoginRequest extends APIFormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, mixed>
+     */
+    public function rules()
+    {
+        return [
+            'email' => 'required|email',
+            'password' => 'required',
+        ];
+    }
+}
